Add Service label to app pod
Add a service label to the app pod so
curls can be based on fqdn instead of IP.

--- a/examples/vl3_basic/helm/vl3_hello/values.yaml
+++ b/examples/vl3_basic/helm/vl3_hello/values.yaml
@@ -9,6 +9,7 @@ replicaCount: 2
 
 nsm:
   serviceName: vl3-service
+  clusterName: cluster-default
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
